  - Handle a few special cases on chinatimes and ebc.
  - Improve the extraction of www.5ch.com.tw
  - Improve the recall of dateline and journalist on www.mdnkids.com

v0.34.0 2020-07-26T22:57:38+0800
  - Add a site-specific extractor for www.nownews.com
  - Add a site-specific extractor for www.mdnkids.com
  - Add a site-specific extractor for www.ustv.com.tw

v0.33.0 2020-07-22T06:44:18+0800
  - Improve the extraction of dateline and journalist for opinion.udn.com
  - Start parsing dateline string and refromat them as ISO8601

v0.32.0 2020-07-18T07:23:04+0800
  - Add a site-specific extractor for www.digitimes.com.tw
  - Add a site-specific extractor for www.hkcna.hk
  - Add a site-specific extractor for www.cw.com.tw
  - Handle the English version of www.hkcnews.com

v0.31.0 2020-07-14T08:57:12+0800
  - Add a site-specific extractor for newtalk.tw
  - Add a site-specific extractor for talk.ltn.com.tw

v0.30.0 2020-07-12T17:10:32+0800
  - Add a site-specific extractor for focustaiwan.tw
  - Improve extraction of dateline and journailst for a few existing news sites.

v0.29.0 2020-07-11T18:33:51+0800
  - Add a site-specific extractor for news.cctv.com

v0.28.0 2020-07-09T23:28:40+0800
  - Add a site-specific extractor for www.xinhuanet.com
  - Add a site-specific extractor for hk.on.cc

v0.27.0 2020-07-06T22:17:57+0800
  - Add a site-specific extractor for new.ctv.com.tw
  - Add a site-specific extractor for hk.crntt.com

v0.26.0 2020-07-03T18:13:05+0800
  - Adjust the dateline output

v0.25.0 2020-07-02T21:40:30+0800
  - Add a site-specific extractor for www.twreporter.org
  - Convert extracted dateline to iso8601 format (pts)

v0.24.0 2020-06-29T08:46:10+0800
  - Convert extracted dateline to iso8601 format (peopo, fountmedia)
  - Improve the extraction of journalist names on SETN
  - Handle an error when parsing dateline on www.idn.com.tw

v0.23.0 2020-05-15T23:10:02+0800
  - Improve the extraction of journalist names on CNA, ETToday, turnnewsapp.com
